<resources>
    <string name="app_name">Mr Me</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="trans">Trans</string>
    <string name="stats">Stats</string>
    <string name="accounts">Accounts</string>
    <string name="more">More</string>
    <string name="_21_nov_2024">21 Nov, 2024</string>
    <string name="cash">Cash</string>
    <string name="business">Business</string>
    <string name="ledger">ledger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_date">Select Date</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="category">Category</string>
    <string name="account_type">Account Type</string>
    <string name="note">Note</string>
    <string name="save_transactions">Save Transactions</string>
    <string name="pluscion">plusCion</string>
    <string name="plusicon">plusIcon</string>
    <string name="_27_november_2024">27 November, 2024</string>
    <string name="every_rupee_counts_track_it">Every Rupee Counts, Track It!</string>
    <string name="getstarted">getStarted</string>
</resources>